--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gl-texture2d",
-  "version": "2.0.10",
+  "name": "@lfdoherty/gl-texture2d",
+  "version": "3.0.0",
   "description": "WebGL texture wrapper",
   "main": "texture.js",
   "directories": {
@@ -8,11 +8,11 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "beefy --open example/example.js -- --transform glslify"
+    "start": "beefy example/example.js -- --transform glslify --open"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/stackgl/gl-texture2d.git"
+    "url": "git://github.com/lfdoherty/gl-texture2d.git"
   },
   "keywords": [
     "webgl",
@@ -23,20 +23,13 @@
   "author": "Mikola Lysenko",
   "license": "MIT",
   "readmeFilename": "README.md",
-  "gitHead": "0d66ce40f2e25b0715689758e9a659f6544f9f3e",
-  "bugs": {
-    "url": "https://github.com/stackgl/gl-texture2d/issues"
-  },
   "devDependencies": {
-    "a-big-triangle": "^1.0.0",
+    "@lfdoherty/fast-big-triangle": "^1.0.0",
     "baboon-image": "^1.0.0",
+    "beefy": "^2.1.8",
     "gl-now": "^1.3.1",
-    "gl-shader": "^4.0.1",
+    "@lfdoherty/gl-shader": "^4.2.0",
     "glslify": "^1.4.0"
   },
-  "dependencies": {
-    "ndarray": "^1.0.15",
-    "ndarray-ops": "^1.2.2",
-    "typedarray-pool": "^1.1.0"
-  }
+  "dependencies": {}
 }
