--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lfdoherty/gl-texture2d",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "WebGL texture wrapper",
   "main": "texture.js",
   "directories": {
@@ -17,18 +17,17 @@
   "keywords": [
     "webgl",
     "texture",
-    "wrap",
-    "ndarray"
+    "wrap"
   ],
   "author": "Mikola Lysenko",
   "license": "MIT",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "@lfdoherty/fast-big-triangle": "^1.0.0",
+    "@lfdoherty/fast-big-triangle": "*",
     "baboon-image": "^1.0.0",
     "beefy": "^2.1.8",
     "gl-now": "^1.3.1",
-    "@lfdoherty/gl-shader": "^4.2.0",
+    "gl-shader": "^4.2.0",
     "glslify": "^1.4.0"
   },
   "dependencies": {}
